# cmake-qt5-template

./: CMakeLists.txt  MyQtProject.pro  README.md
src/: main.cpp  mainui.h
